<resources>
    <string name="app_name">擦肩</string>
    <string name="action_settings">Settings</string>
	<string name="activity_progress_bar_text">正在加载</string>
    <string name="newguid_pass">跳过 </string>
    <string name="login_zhanghao">账号</string>
    <string name="login_zhanghao_hint">请输入注册的手机号或邮箱</string>
    <string name="login_password">密码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_forget_text">忘记密码？</string>
    <string name="login_login_text">登录</string>
    <string name="login_signup_text">快速注册</string>
    <string name="login_thirtparty_content">可以用以下方式登录</string>
    <string name="login_thirtparty_renren_textview">人人登录</string>
    <string name="login_thritparty_qq_textview">QQ登录</string>
    <string name="login_thritparty_weibo_textview">新浪微博登录</string>
    <string name="login_verification_ing">正在验证用户名密码</string>
    <string name="login_username_password_error">用户名或密码错误，请重新输入！</string>
    <string name="login_get_friend_info">获取好友信息</string>
    <string name="login_get_user_info">获取用户信息</string>
    <string name="login_get_friend">获取好友列表</string>
    <string name="title_title_content">加入擦肩</string>
    <string name="register_nick_text">昵称</string>
    <string name="register_nick_content_hint_text">例如：清嘉</string>
    <string name="register_password_content_hint_text">设置至少六位密码</string>
    <string name="register_account_content_hint_text">手机号（更快捷）或邮箱</string>
	<string name="register_register_text">注册</string>
	<string name="register_text_content">点击“注册”意味着你同意擦肩的《使用协议》哦！</string>
	<string name="register_text_content_part1">点击“注册”意味着你同意擦肩的</string>
	<string name="register_text_content_part2">《使用协议》</string>
	<string name="register_text_content_part3">哦！</string>
	<string name="register_delete_icon_tag">tag</string>
	<string name="register_network_off">当前网络不可用，请检查网络设置</string>
	<string name="register_phone_error">手机号码错误</string>
	<string name="register_mail_error">邮箱地址错误</string>
	<string name="register_mail_content">你输入的是一个无效的邮箱地址，请更正！</string>
	<string name="register_phone_error_content">你输入的是一个无效的手机号码，请更正！</string>
	<string name="register_mail_send_ing">正在发送验证码到邮箱，请等候</string>
	<string name="register_phone_send_ing">正在发送验证码到手机，请等候</string>
	<string name="register_check_verification_code">正在检验该验证码</string>
	<string name="loading_textview_text">正在验证手机号</string>
	<string name="loading_textview_text_mail">正在验证邮箱</string>
	<string name="loading_textview_for_mail">正在发送验证码到邮箱，请稍等</string>
	<string name="dialog_common_title">确认手机号码</string>
	<string name="dialog_reply_title">回复</string>
	<string name="dialog_modify_account_password">为保障你的数据安全，修改密码前请填写原密码。</string>
	<string name="dialog_confirm_mail_title">确认邮箱地址</string>
	<string name="dialog_confirm_cancel">取消</string>
	<string name="dialog_confirm_ok">确定</string>
	<string name="dialog_reply_textlimit">50</string>
	<string name="dialog_reply_edittext">真的挺好的，来点长的，看看效果如何哈，真的要这么长么</string>
	<string name="dialog_confirm_mail_registered">该邮箱地址已经注册擦肩，是否直接登录？</string>
	<string name="dialog_confirm_phone_registered">该手机号已经注册擦肩，是否直接登录？</string>
	<string name="dialog_confirm_phone_text">我们将发送验证码短信到这个号码：</string>
	<string name="dialog_confirm_mail_text">我们将发送验证码到这个邮箱地址：</string>
	<string name="dialog_confirm_phone">18311256785</string>
	<string name="dialog_one_content">该手机号已经注册擦肩，是否直接登录？</string>
	<string name="dialog_no_avail_phone">您输入的是一个无效的手机号码，请更改！</string>
	<string name="dialog_not_support_phone">现在暂时不支持手机验证！</string>
	<string name="dialog_error_json">服务器发生错误，抱歉~~~</string>
	<string name="dialog_error_phoneormail">验证手机号或邮箱错误！</string>
	<string name="dialog_error_phone">手机号码错误</string>
	<string name="phone_verify_title">手机验证码</string>
	<string name="phone_verify_content">我们已经发送验证码到你的手机：</string>
	<string name="phone_verify_block_text">验证码</string>
	<string name="phone_verify_hint_text">输入验证码</string>
	<string name="phone_verify_time_text">%1$s秒后点击重新发送</string>
	<string name="phone_verify_time_over_text">重新发送</string>
	<string name="phone_verify_last_text">还差一步，Go</string>
	<string name="phone_verify_part_1">我们已经发送</string>
	<string name="phone_verify_part_3">到你的手机：</string>
	<string name="phone_verify_error_code">验证码不正确，请重新输入</string>
	<string name="phone_verify_back_text">验证码短信可能会有所延迟，确定取消并重新发送？</string>
	<string name="phone_verify_back_cancel_text">等待</string>
	<string name="phone_verify_back_ok_text">重新开始</string>
	<string name="mail_verify_title">查收确认信</string>
	<string name="mail_verify_mail_address">wusongtao@live.cn</string>
	<string name="mail_verify_resend_text">去邮箱查看邮件，若没收到请点击</string>
	<string name="mail_verify_part_1">我们已经发送</string>
	<string name="mail_verify_part_3">到你的邮箱：</string>
	<string name="mail_verify_back_text">验证码已发邮箱啦，取验证码的过程请保持此页或按HOME键。</string>
	<string name="mail_verify_back_cancel_text">保持此页</string>
	<string name="mail_verify_back_ok_text">重新开始</string>
	<string name="mail_verify_error_code">验证码不正确，请重新输入</string>
	<string name="mail_verify_resend_text_part_1">去邮箱查看邮件，若没收到请点击</string>
	<string name="mail_verify_resend_text_part_2">重新发送</string>
	<string name="school_verify_school_text">学校</string>
	<string name="school_verify_school_hint_text">选择我的学校</string>
	<string name="school_verify_subject_text">学科</string>
	<string name="school_verify_subject_hint_text">选择我的学科（文、理、工）</string>
	<string name="school_verify_gender_text">性别</string>
	<string name="school_verify_gender_girl">女</string>
	<string name="school_verify_gender_man">男</string>
	<string name="school_verify_description">性别一旦设定，将不能再更改哦！其它性别的同学请进官方QQ群向产品经理反馈~</string>
	<string name="school_verify_information">学校信息认证</string>
	<string name="school_verify_next">开启浪漫之旅</string>
	<string name="school_register_ing">正在注册用户信息</string>
	<string name="error_json_parse">json解析错误</string>
	<string name="error_server_parse">账号错误</string>
	<string name="error_sendcode">发送验证码错误</string>
	<string name="error_json_error">解析错误</string>
	<string name="error_login">登录错误</string>
	<string name="error_verification_code_error">验证码错误，请重新输入</string>
	<string name="error_verification_time_out">验证码过期，请重新发送</string>
	<string name="error_verification_title">验证码</string>
	<string name="error_forget_pw">邮箱或手机号错误，请重新输入</string>
	<string name="error_forget_reset">重新设置密码失败，请重新设置</string>
	<string name="forget_pw_title">找回密码</string>
	<string name="forget_pw_content">请输入注册的手机号或邮箱</string>
	<string name="forget_pw_part1">请输入注册的</string>
	<string name="forget_pw_part2">手机号</string>
	<string name="forget_pw_part3">或</string>
	<string name="forget_pw_part4">邮箱</string>
	<string name="forget_pw_next">下一步</string>
	<string name="forget_newpw_content">请输入6位或6位以上新密码</string>
	<string name="forget_newpw_hint">输入6位以上数字或字符</string>
	<string name="forget_renewpw_again">再输入一次新密码</string>
	<string name="forget_newpw_text">新密码</string>
	<string name="forget_renewpw_text">确认新密码</string>
	<string name="forget_renewpw_complish">完成</string>
	<string name="forget_renewpw_part1">请输入6位或6位以上</string>
	<string name="forget_renewpw_part2">新密码</string>
	<string name="forget_resetpw_ing">正在重新设置密码</string>
	<string name="forget_newpw_error">密码错误</string>
	<string name="forget_newpw_content_">两个密码不一致，请重新输入</string>
	<string name="forget_modify_success">修改成功，请重新登录</string>
	<string name="forget_modify_error">修改密码失败，请重新输入密码</string>
	<string name="forget_send_mail_phone">发送失败，请重新输入邮箱或者手机号</string>
	<string name="main_ui_header_content">当前网络不可用，请检查网络设置。</string>
	<string name="main_ui_header_content_wlan">为了记录遇到的TA，请保持WLAN开启哦。</string>
	<string name="main_ui_header_content_material">完善资料，别让擦肩而过变成继续错过。</string>
	<string name="main_ui_center_text1">暂无擦肩记录</string>
	<string name="main_ui_center_text2">校园走一走，相遇自然有</string>
	<string name="main_ui_center_text3">随机聊</string>
	<string name="main_ui_center_text4">走出去</string>
	<string name="main_ui_center_text5">才有 The Right One</string>
	<string name="main_ui_name">卿家</string>
	<string name="main_ui_encounter">已相遇%d次</string>
	<string name="main_ui_signature">动漫控的世界你不会懂。</string>
	<string name="main_ui_encounter_time">%s相遇</string>
	<string name="main_ui_title_cajian">擦肩</string>
	<string name="main_ui_title_tongxunlu">通讯录</string>
	<string name="main_ui_title_chat">聊天</string>
	<string name="main_ui_title_yuanfen">缘分</string>
	<string name="main_ui_title_setting">设置</string>
	<string name="main_ui_chat_icon_number">%d</string>
	<string name="main_ui_chat_title_cotent">青衫</string>
	<string name="main_ui_chat_content">今天是个好天气，我觉得要字符串很长才行，要不然测试不出来</string>
	<string name="main_ui_chat_time">%s</string>
	<string name="main_ui_cajian_notwifi_text">为了记录遇到的TA，请保持WLAN开启哦。</string>
	<string name="main_ui_cajian_notlogo_text">完善资料，别让擦肩而过变成继续错过。</string>
	<string name="detail_user_name">机械 余未</string>
	<string name="detail_user_uid">擦肩号：%d</string>
	<string name="detail_user_nickname">昵称：%s</string>
	<string name="detail_cajian_record">擦肩记录</string>
	<string name="detail_detail_info">详细资料</string>
	<string name="detail_send">发送</string>
	<string name="detail_real_text">写出真诚的文字，是一个良好的交友开端！</string>
	<string name="detail_viewpager_left_text1">你们还没有相遇过</string>
	<string name="detail_viewpager_left_text2">你可以设置 “相遇提醒我” ，抓住不期的相遇</string>
	<string name="detail_reply_text_content">我：你哪个专业的呀，空间怎么都是空的？</string>
	<string name="detail_reply_text_content1">我：%s</string>
	<string name="detail_reply_text_content2">你哪个专业的呀，空间怎么都是空的？</string>
	<string name="detail_reply_text_content3">挺烦你的，别理我了啊</string>
	<string name="detail_reply_text_huifu">回复</string>
	<string name="detail_reply_requesting">正在发送回复</string>
	<string name="detail_reply_error">发送失败</string>
	<string name="detail_reply_success">发送成功</string>
	<string name="detail_reply_add_success">添加好友成功，开始进行对话吧~</string>
	<string name="detail_faqi_chat">发起聊天</string>
	<string name="detail_qiuknow_null">请填写发送的请求</string>
	<string name="detail_qiuknow_send_msg">正在处理</string>
	<string name="detail_qiuknow_send_success">发送成功</string>
	<string name="detail_qiuknow_send_error">发送失败</string>
	<string name="detail_viewpager_left_text">个性签名</string>
	<string name="detail_viewpager_left_conetnt">打开电视，雨雨雨，多少相思泪</string>
	<string name="detail_viewpager_left_photos">个人动态</string>
	<string name="detail_viewpager_xingzuo">星座</string>
	<string name="detail_viewpager_birth">生日</string>
	<string name="detail_viewpager_school">学校</string>
	<string name="detail_viewpager_class">班级</string>
	<string name="detail_viewpager_hometown">家乡</string>
	<string name="detail_viewpager_xingzuo_content">水瓶座</string>
	<string name="detail_viewpager_birth_content">10月1日</string>
	<string name="detail_viewpager_school_content">哈佛大学</string>
	<string name="detail_viewpager_class_content">计算机1014班</string>
	<string name="detail_viewpager_hometown_content">美国</string>
	<string name="detail_viewpager_time">8月8号 09:17</string>
	<string name="detail_viewpager_left_count">第%d次相遇</string>
	<string name="service_push_name">IMPush</string>
	<string name="service_wifi_net">Wifi_Broadcast</string>
	<string name="thread_unexception_error">很抱歉，程序出现异常，即将退出</string>
	<string name="chat_room_send">发送</string>
	<string name="chat_room_time">12月11日 下午15:40</string>
	<string name="yuanfencircle_content_no_text1">到缘分圈查看有缘人近况</string>
	<string name="yuanfencircle_content_no_text2">分享自己的精彩瞬间！</string>
	<string name="yuanfencircle_content_no_button">分享</string>
	<string name="yuanfencircle_content_user_zan_text1">邬松涛、ki、蔡妍、于雷等4人觉得喜欢</string>
	<string name="yuanfencircle_content_user_zan_text2">ki、</string>
	<string name="yuanfencircle_content_user_zan_text3">蔡妍、</string>
	<string name="yuanfencircle_content_user_zan_text4">于雷</string>
	<string name="yuanfencircle_content_user_zanfinal">等4人觉得喜欢</string>
	<string name="yuanfencircle_content_comment_text1">展开更多评论</string>
	<string name="yuanfencircle_content_comment_dy_left_text">邬松涛回复ki：没问题，假期好好玩~</string>
	<string name="yuanfencircle_content_comment_dy_left_text2">ki回复蔡妍：今天天好，就是要唱啊，</string>
	<string name="yuanfencircle_content_comment_dy_left_text3">蔡妍回复ki：今天我生日哈，我请你吃饭怎么样！</string>
</resources>