<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingTop="@dimen/main_ui_center_padding_top"
	android:paddingBottom="@dimen/main_ui_center_padding_bottom">
	
	<TextView 
		android:id="@+id/main_ui_first_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_alignParentTop="true"
		android:text="@string/main_ui_center_text4"
		android:textColor="@color/main_ui_header_text_color"
		android:textSize="@dimen/main_ui_text_size"/>
	
	<TextView 
		android:id="@+id/main_ui_second_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/main_ui_text_margin"
		android:layout_below="@id/main_ui_first_text"
		android:text="@string/main_ui_center_text5"
		android:textColor="@color/main_ui_header_text_color"
		android:textSize="@dimen/main_ui_text_size"
		android:layout_centerHorizontal="true"/>
	
	<TextView 
		android:id="@+id/main_ui_center_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:layout_marginTop="@dimen/main_ui_text_margin"
		android:layout_below="@id/main_ui_second_text"
		android:background="@drawable/main_ui_text_bg"
		android:text="@string/main_ui_center_text3"
		android:textColor="@color/main_ui_header_text_color"
		android:textSize="@dimen/main_ui_text_size"
		android:layout_centerHorizontal="true"/>
    
</RelativeLayout>