<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    
    <ImageView 
        android:id="@+id/yuanfencircle_zanicon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:layout_alignParentLeft="true"
       	android:layout_marginRight="@dimen/yuanfencircle_content_zanicon_marginright"
        android:layout_marginTop="@dimen/yuanfencircle_content_zanicon_margintop"
        android:layout_marginLeft="@dimen/yuanfencircle_content_zanicon_marginleft"
        android:src="@drawable/yuanfencircle_zan_icon"/>

    <TextView 
        android:id="@+id/yuanfencircle_zantext_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yuanfencircle_content_user_zan_text1"
        android:textColor="@color/yuanfencircle_content_user_zan_text"
        android:textSize="@dimen/yuanfencircle_content_zantext"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/yuanfencircle_content_zantext_margintop"
        android:background="@drawable/yuanfencircle_zantext_bg"
        android:layout_toRightOf="@id/yuanfencircle_zanicon"/>

    <TextView 
        android:id="@+id/yuanfencircle_zantext_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yuanfencircle_content_user_zan_text2"
        android:textColor="@color/yuanfencircle_content_user_zan_text"
        android:textSize="@dimen/yuanfencircle_content_zantext"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/yuanfencircle_content_zantext_margintop"
        android:background="@drawable/yuanfencircle_zantext_bg"
        android:layout_toRightOf="@id/yuanfencircle_zantext_1"/>
    
    <TextView 
        android:id="@+id/yuanfencircle_zantext_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yuanfencircle_content_user_zan_text3"
        android:textColor="@color/yuanfencircle_content_user_zan_text"
        android:textSize="@dimen/yuanfencircle_content_zantext"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/yuanfencircle_content_zantext_margintop"
        android:background="@drawable/yuanfencircle_zantext_bg"
        android:layout_toRightOf="@id/yuanfencircle_zantext_2"/>
    
    <TextView 
        android:id="@+id/yuanfencircle_zantext_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yuanfencircle_content_user_zan_text4"
        android:textColor="@color/yuanfencircle_content_user_zan_text"
        android:textSize="@dimen/yuanfencircle_content_zantext"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/yuanfencircle_content_zantext_margintop"
        android:background="@drawable/yuanfencircle_zantext_bg"
        android:layout_toRightOf="@id/yuanfencircle_zantext_3"/>
    
    <TextView 
        android:id="@+id/yuanfencircle_zantext_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/yuanfencircle_content_zantext_margintop"
        android:layout_toRightOf="@id/yuanfencircle_zantext_4"
        android:text="@string/yuanfencircle_content_user_zanfinal"
        android:textColor="@color/yuanfencircle_content_user_zan_final"
        android:textSize="@dimen/yuanfencircle_content_zantextfinal"/>
    
</RelativeLayout>
